# Logic-Analyzer

./: .gitignore  README.md
esp32/src/: main.cpp
pico_w/: CMakeLists.txt
pico_w/src/: i2c_capture.c  i2c_capture.pio  lwipopts.h  main.c  wifi_server.c  wifi_server.h
src/: i2c_capture.c  i2c_capture.h  main.c
